<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_one"
        style="@style/TextStyle"/>
    <TextView
        android:id="@+id/text_two"
        android:layout_below="@id/text_one"
        style="@style/TextStyle"
        />
    <TextView
        android:id="@+id/text_result"
        android:layout_below="@id/text_two"
        android:textColor="@color/colorResultHint"
        style="@style/TextStyle"/>

   <TableLayout
       android:id="@+id/table_layout"
       android:stretchColumns="*"
       android:layout_below="@id/text_result"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:id="@+id/btn_clear_all"
                android:text="@string/clear_all"
                android:textColor="@color/colorTextClearAll"
                style="@style/ButtonNumber"
                android:onClick="OnButtonsClick"
                />
            <ImageButton
                android:src="@drawable/ic_delete"
                android:id="@+id/btn_delete"
                style="@style/ButtonNumber"
                android:onClick="OnButtonsClick"
                />
            <Button
                android:id="@+id/btn_div"
                android:text="@string/math_div"
                style="@style/ButtonNumber"
                android:onClick="OnButtonsClick"
                />
            <Button
                android:id="@+id/btn_division"
                android:text="@string/math_divisiom"
                style="@style/ButtonNumber"
                android:onClick="OnButtonsClick"
                />
        </TableRow>
       <TableRow>
           <Button
               android:id="@+id/btn_1"
               android:text="@string/number_one"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
           <Button
               android:id="@+id/btn_2"
               android:text="@string/number_two"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
           <Button
               android:id="@+id/btn_3"
               android:text="@string/number_three"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
           <ImageButton
               android:src="@drawable/ic_multi"
               android:id="@+id/btn_multi"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />

       </TableRow>
       <TableRow>
           <Button
               android:id="@+id/btn_4"
               android:text="@string/number_four"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />

           <Button
               android:id="@+id/btn_5"
               style="@style/ButtonNumber"
               android:layout_height="match_parent"
               android:onClick="OnButtonsClick"
               android:text="@string/number_five" />
           <Button
               android:id="@+id/btn_6"
               android:text="@string/number_six"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
           <ImageButton
               android:src="@drawable/ic_add"
               android:id="@+id/btn_add"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
       </TableRow>
       <TableRow>
           <Button
               android:id="@+id/btn_7"
               android:text="@string/number_seven"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
           <Button
               android:id="@+id/btn_8"
               android:text="@string/number_eight"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
           <Button
               android:id="@+id/btn_9"
               android:text="@string/number_nine"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
           <ImageButton
               android:src="@drawable/ic_sub"
               android:id="@+id/btn_sub"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
       </TableRow>
       <TableRow>
           <Button
               android:id="@+id/btn_negative"
               android:text="@string/negative"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
           <Button
               android:id="@+id/btn_0"
               android:text="@string/number_zero"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
           <Button
               android:id="@+id/btn_dot"
               android:text="@string/dot"
               style="@style/ButtonNumber"
               android:onClick="OnButtonsClick"
               />
           <ImageButton
               android:src="@drawable/ic_result"
               android:id="@+id/btn_result"
               style="@style/ButtonResult"
               android:onClick="OnButtonsClick"
               />
       </TableRow>

   </TableLayout>
</RelativeLayout>